memperbaiki api wishlist
